# bitter

./: CMakeLists.txt
src/: CMakeLists.txt  bitter.c
src/bitter/: bitter.h
tests/: CMakeLists.txt  bitter_bitter.c  test_macros.h
